--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.10",
     "nanoid": "^3.1.20",
+    "supertest": "^6.0.1",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
@@ -17,12 +18,13 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Ritam Verma",
   "license": "MIT"
